k8/aws/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rdicidr
  namespace: production
spec:
  ports:
  - port: 8080
    name: rdicidr
  clusterIP: None
  selector:
    app: rdicidr
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rdicidr
  namespace: production
spec:
  selector:
    matchLabels:
      app: rdicidr # has to match .spec.template.metadata.labels
  serviceName: "rdicidr"
  replicas: 3 # by default is 1
  minReadySeconds: 10 # by default is 0
  template:
    metadata:
      labels:
        app: rdicidr # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: rdicidr
        image: 847460071795.dkr.ecr.us-east-1.amazonaws.com/rdicidr:latest
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
