k8/aws/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rdicidr
  namespace: production
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rdicidr
            port:
              number: 8080
